<resources>
    <string name="app_name">iConNet</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tutorials">Tutorials</string>
    <string name="troubleshooting">Troubleshooting</string>
    <string name="ip_calculator">IP Calculator</string>
    <string name="exit">Exit</string>
    <string name="open_drawer">Open drawer</string>
    <string name="close_drawer">Close drawer</string>
    <string name="ip_adress">IP Address</string>
    <string name="subnet_mask">Subnet Mask</string>
    <string name="high_address">High Address</string>
    <string name="low_address">Low Address</string>
    <string name="maximum_addresses">Maximum Addresses</string>
    <string name="windows_7">Windows 7</string>
    <string name="windows_8">Windows 8</string>
    <string name="windows_10">Windows 10</string>
    <string name="ubuntu">Ubuntu</string>
    <string name="all">All</string>
    <string name="cidr">cidr</string>
    <string name="bitlength">Bitlength</string>
    <string name="win7">win7</string>
    <string name="win8">win8</string>
    <string name="win10">win10</string>
    <string name="ubu">ubu</string>
    <string name="topo">topo</string>
    <string name="ip_result_will_show_up_text">Results will show up after entering a valid IP address</string>
    <string name="take_a_quiz">Take A Quiz!</string>
    <string name="are_you_ready_to_take_the_quiz">Are you ready to take the quiz?</string>
    <string name="yes_let_s_start">Yes, Let\'s start!</string>
    <string name="subnet_mask_in_bytes">Subnet Mask In Bytes</string>
    <string name="take_the_quiz">Take The Quiz!</string>
    <string name="broadcast_address">Broadcast Address</string>
    <string name="network_address">Network Address</string>
    <string name="home_address_range">IP Address Range</string>
    <string name="router">Router</string>
    <string name="cable">Cable</string>
    <string name="ok">OK</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="helpful">Was this helpful?</string>
    <string name="centralized">Centralized</string>
    <string name="collaborative">Collaborative</string>
    <string name="subnetting">Subnetting</string>
    <string name="distributed">Distributed</string>

    <string name="title_activity_video">VideoActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="rj45">Rj45</string>
    <string name="click_here_for_a_video_tutorial">Click here for a subnetting video tutorial</string>
    <string name="cable_straight_through">Cable Straight-Through</string>
    <string name="cable_cross_over">Cable Cross-Over</string>
    <string name="modem">Modem</string>
    <string name="label_switch">Switch</string>
    <string name="wireless_adapter">Wireless USB Adapter</string>
    <string name="coaxial">Coaxial Cable</string>
    <string name="firewall">Firewall</string>
</resources>
