<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/mainModules"
        android:checkableBehavior="none">
        <item
            android:id="@+id/miTutorials"
            android:checked="false"
            android:icon="@drawable/ic_tutorial"
            android:title="@string/tutorials" />
        <item
            android:id="@+id/miTroubleshooting"
            android:checked="false"
            android:icon="@drawable/ic_troubleshooting"
            android:title="@string/troubleshooting" />

        <item
            android:id="@+id/miIPCalculator"
            android:checked="false"
            android:icon="@drawable/ic_calc"
            android:title="@string/ip_calculator" />

        <item
            android:id="@+id/miQuiz"
            android:checked="false"
            android:icon="@drawable/ic_quiz"
            android:title="@string/take_the_quiz" />

    </group>

    <group
        android:id="@+id/support_modules"
        android:checkableBehavior="none">
        <item
            android:id="@+id/miExit"
            android:checked="false"
            android:title="@string/exit" />
    </group>

</menu>