<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="all">
        <item
            android:id="@+id/all"
            android:checkable="true"
            android:checked="true"
            android:title="@string/all"
            app:showAsAction="never" />
        <item
            android:id="@+id/win7"
            android:checkable="true"
            android:checked="true"
            android:title="@string/windows_7"
            app:showAsAction="never" />
        <item
            android:id="@+id/win8"
            android:checkable="true"
            android:checked="true"
            android:title="@string/windows_8"
            app:showAsAction="never" />
        <item
            android:id="@+id/win10"
            android:checkable="true"
            android:checked="true"
            android:title="@string/windows_10"
            app:showAsAction="never" />
    </group>
</menu>